# ChangeLog for dev-python/w3lib
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/w3lib/ChangeLog,v 1.11 2014/08/28 05:01:48 idella4 Exp $

*w3lib-1.10.0 (28 Aug 2014)

  28 Aug 2014; Ian Delaney <idella4@gentoo.org> +w3lib-1.10.0.ebuild:
  bump

*w3lib-1.8.0 (15 Aug 2014)

  15 Aug 2014; Ian Delaney <idella4@gentoo.org> +w3lib-1.8.0.ebuild:
  bump

*w3lib-1.6 (10 Jun 2014)

  10 Jun 2014; Ian Delaney <idella4@gentoo.org> +w3lib-1.6.ebuild,
  -w3lib-1.0.ebuild, -w3lib-1.1.ebuild, -w3lib-1.2-r1.ebuild, -w3lib-1.2.ebuild,
  -w3lib-1.3.ebuild:
  bump; drop py2.6 pypy2_0 add py3 support, rm old

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> w3lib-1.2-r1.ebuild,
  w3lib-1.3.ebuild, w3lib-1.5.ebuild:
  Add support for the new PyPy slotting.

*w3lib-1.5 (26 Nov 2013)

  26 Nov 2013; Patrick Lauer <patrick@gentoo.org> +w3lib-1.5.ebuild:
  Bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> w3lib-1.2-r1.ebuild,
  w3lib-1.3.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*w3lib-1.3 (13 Jun 2013)

  13 Jun 2013; Patrick Lauer <patrick@gentoo.org> +w3lib-1.3.ebuild:
  Bump

*w3lib-1.2-r1 (21 Mar 2013)

  21 Mar 2013; Ian Delaney <idella4@gentoo.org> +w3lib-1.2-r1.ebuild:
  migration revbump

*w3lib-1.2 (28 Jun 2012)

  28 Jun 2012; Patrick Lauer <patrick@gentoo.org> +w3lib-1.2.ebuild:
  Bump

*w3lib-1.1 (20 Apr 2012)

  20 Apr 2012; Mike Gilbert <floppym@gentoo.org> +w3lib-1.1.ebuild,
  w3lib-1.0.ebuild:
  Version bump. Set PYTHON_DEPEND=2.

*w3lib-1.0 (21 Feb 2012)

  21 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org> +metadata.xml,
  +w3lib-1.0.ebuild:
  Add dev-python/w3lib-1.0, bug #398641. Thanks to Guillaume Bandet
  <guillaume.bandet@m4x.org>