@@ -1,20 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST w3lib-1.10.0.tar.gz 12300 SHA256 670cd9647dfc9f5adbf973c300bc62f3ba6687acfed93b67527f4cca5459380b SHA512 9f17083b57b3363c4eb656d46b87a122c3dcac0a58bf4f9fd9aab7d28776931d16eb9b5c7f267cfeb8e7f52d695e9b22f5f83b724fd671a70073325972088b2f WHIRLPOOL 7274e099cdae0672f84057e5d7cbdc0ea1eb8de909b4f35b738ae24b9ddb69efb8bf0254ddde668acef0063f0970a3361d1de0a570edbc5c67626d09181459eb
-DIST w3lib-1.5.tar.gz 9416 SHA256 f611f0a21327aa93af09ef45c04fa87849b697e60157c1fc24bbb90796d290a6 SHA512 a80c0b4a23255843c6724fcab53a296217cd5e61b83d0dd1790a987e477245a1e5f075f0fdc270130faf33bb021f8cae652ac0487c400b8ad574b0ae1e5a23dc WHIRLPOOL 33dc3eedabbb3e08abcd0faf3fa23cebe4994d78a738f5b9f7da558f84aa5af25de7aff5a055e6bd3a83d30ce7b37240bdb0096191b04e4933d9083d05a917d8
-DIST w3lib-1.6.tar.gz 11815 SHA256 9a28d3b796d20b98ae32247937e74755aec8409931ffe2e6a313c408a4808591 SHA512 f9a636e756e1c55273ae7a1c5eabcb62bf0f778c941ddcdb74276bc6d60957a0d86c22c1e5e27e8651e61cf5491abad6c02a7c151f4af861c7e9a7b34345d335 WHIRLPOOL f815197ff7aa812c43401077fabf94b6cc65e86a6432105e1e397d7c0eed4e6d724415c7db9545b5c2bfcf5fe0279a0649ac2978e94cc72307576772bae46bf0
-DIST w3lib-1.8.0.tar.gz 12300 SHA256 b11a5a2e3c1534ebe4a9674cc66912a4df126b650a8db2af892e8bfaf3fefda2 SHA512 7a79e7be4d7ba4987aa13371d1c2b23e85f9b53d2f89eb758eeff9104c4ee0c313fdd31a51c453f97753b901b82d2fcbf9e1c1d950a9c5376d9a06d4b1ef6627 WHIRLPOOL c7eac72d1e565282c5cc12642ac1f42ae50add00dceb56634d85e281f3c8fe9911816250f8509af7ec86660a3e9c9413f8d345a6d7f6ff3c0bcd69f5ef9c81ed
-EBUILD w3lib-1.10.0.ebuild 597 SHA256 cf8a446b5de1d5808ec01f9c2a961b655a1ef98487f0ddfd7f644d0e171e3ccd SHA512 f208f86dc3657bf49a8f6ed2d2fe8b5b14bf8e18ef1d437481ab0227ae819fb58ea32b5609a791555b1d3d7148ee22fa4e2d07f4966e8ce3ecb006de0a6ce044 WHIRLPOOL 0e47a60ea510d392b2b780f0fcd08fe5240402739e415cfbf93d54ef9fdf8a66687ed3ec07bd00becf77d8dc399ea08be04f23fe1f6b45eec74a285da4813bf7
-EBUILD w3lib-1.5.ebuild 496 SHA256 890edf58c52c8a7d6d007421b019387b5f29f1e958aa86c09b1ab2d34eea306f SHA512 f9995f0787dfd950bedfd3e09b87a9043501fa1202dcf99e04704e7a5c9676a4d825e95c8555405c1b8caaa41bc8ab102a995c5347ee7788eb22e5852781af2e WHIRLPOOL a76df54db4f44ea4b319f26d518f71771f0e0030a39a95b160747bd700b3a3b622e9f8ea8a03d046218fb4c9218aa69fe545648c372a5c98b9017b873760b40d
-EBUILD w3lib-1.6.ebuild 594 SHA256 be675d0c9a22908db410b8ba4764320319101878e6aa23808b0d5f6b8e36aa07 SHA512 95af37ab0dbd6409c8720eb30838f985f5d240b875a6baafe057671ec0296469b2dc3b74fe70a433c2834ad57c07fae1b959b1b78076425c81f4ef8b951ae50b WHIRLPOOL 3bb688d6d86f46125c1eaf4c3569c1daee04b989d4f88e03d3254be895f79a88ac502955bc70fe13de479a90109bfd17ac5920f15a3816d915ac8c28866982c3
-EBUILD w3lib-1.8.0.ebuild 596 SHA256 477b6be675b260af3d7570a42f1bbc72ab924d6e246b8baf4fad1f5a0141097e SHA512 6db88dc5d2189a4a3ef353d9ad0adfa7bd5cec437ddc3c8b0dda97bea12f10a8e2c7db3e32050cd8e5cebe6f3a89ffcd7a456a77b5a1561853294c9f0b22b87b WHIRLPOOL af266ce323f863e90939910d09fe7038e43ac825efcd573abceae5c1682fc11a5d325cc6467061c231a47c6691b6f725940be70f5ac4c977b2d1a9b83177bfa4
-MISC ChangeLog 1752 SHA256 b310bb45f0807616090c27a97b8db32a737afe90819c109b4b010ac9ddb2cdcf SHA512 e89c82e0688af1389535f0bed4a21016b3ced644f3150813106e231c4d733f138b4de30bdc173ba30b871c63ecedaa092b1ab289f51eb059b188de5e2b64c93b WHIRLPOOL 4cfa20e87643fd688eef1d14f291cb5e751d50059f7a67c882bb3e39f2d2a5777f24bfc445fc854ede35a6cc3f4ef5743a3bb94c1bd95a1ea5944e6f386124a3
+DIST w3lib-1.11.0.tar.gz 12083 SHA256 826f6184232c385b7c8038ef7ae5506f1cb3f8fa470ac12ce0fb6fb0a592fb92 SHA512 421e75639291c6aec56aa28efeaf2a440c878662085a9a667bf1b89e30b2b6ce29066d524f48ad99af1563a1b886483cc81d8897975697084256588319988b37 WHIRLPOOL db05a2f4799065ad4a942f363ce45b00cb87689be049c42a35a0ef703907742fb3bd71a51b6c6a49266bb0e47adf1be6b144708beab0a03749f1c66e597cf7b2
+EBUILD w3lib-1.11.0.ebuild 597 SHA256 3dbc1060bae36993b9cd3063b6fa3aa7ada950a82822e8eed4006301b93794b7 SHA512 6a9a1f01b953e3fec3e4394f9bb93717b4773eb833c4457fd9641106af45d01e17f8472c2f13b575d85bc358e4d65dbadf7dc70a609e8fc5aa89352509e0459b WHIRLPOOL 978d39dbe5dbed1c37c080568bf431d7c594d6c319aeeaecd8ff56eea4397ef5cb5fc3a1614d42e4f96a205db164fa85b7eb06b6e1613224d52878a3c6373ccb
+MISC ChangeLog 1952 SHA256 441df00a357417b86f22c95f61ae6cc235405ef3b3532397a1991f1625bed4a0 SHA512 358d8cd9ff7800fa0c886d0236afcc224d4a612a271a005b7d6888e8836cafc9f31d10d2a5b0a3290b5e9f0aec20dadefdd7684433d4da92ee117f71223bd675 WHIRLPOOL bc30ea9ffd2ba1747e3f3742cee158d7d2eda9b6fe5d0d8b208ac85dbb33a762e38123e207b5386ceb101a1fe218e69d51f6b7e6867c6488f48ae7432c42ed2a
 MISC metadata.xml 295 SHA256 536aca0e2d3f5ebee738b29f3f1b0660e6bcb2055d4aafbf0e530925abb0c474 SHA512 49a8976e442e5bf458c91e7968d540837e8fc49eebb631232259b3f1a1f0891b35394d0634ffe1c7f49eb8917d40f024d438c62677457b6b5051cba1a56346d7 WHIRLPOOL cc8ca06446b1e0777c2fcdab5dc84cb5f7c55f44f6677fed341a9279882676cd57552cde30c4efaba0881b3669e4a563cdc27942642d325e43ffc79f349bb2cf
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlP+tZwACgkQso7CE7gHKw2mTwCfSiRvjXXjLl/nO9boA8M/0beS
-sYMAn1EoKQvG3kn2yvzrj8SsqBsFQpMu
-=GKEJ
+iEYEAREIAAYFAlS4dWwACgkQso7CE7gHKw2vcACg1AY0B88ffaXXzNHT6/NA1UT/
+whMAoNj9j1AsbKheyCGPpkUqgyAIFmWq
+=pBJ6
 -----END PGP SIGNATURE-----
