@@ -1,21 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/w3lib/w3lib-1.10.0.ebuild,v 1.1 2014/08/28 05:01:48 idella4 Exp $
-
-EAPI=5
-
-PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy )
-
-inherit distutils-r1
-
-DESCRIPTION="Python library of web-related functions"
-HOMEPAGE="http://github.com/scrapy/w3lib"
-SRC_URI="mirror://pypi/${P:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
-RDEPEND=">=dev-python/six-1.4.1[${PYTHON_USEDEP}]"
