@@ -1,18 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/w3lib/w3lib-1.5.ebuild,v 1.2 2014/03/31 20:38:34 mgorny Exp $
-
-EAPI=5
-
-PYTHON_COMPAT=( python{2_6,2_7} pypy pypy2_0 )
-
-inherit distutils-r1
-
-DESCRIPTION="Python library of web-related functions"
-HOMEPAGE="http://github.com/scrapy/w3lib"
-SRC_URI="mirror://pypi/${P:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
