@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/w3lib
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/w3lib/ChangeLog,v 1.11 2014/08/28 05:01:48 idella4 Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/w3lib/ChangeLog,v 1.12 2015/01/16 02:20:13 idella4 Exp $
+
+*w3lib-1.11.0 (16 Jan 2015)
+
+  16 Jan 2015; Ian Delaney <idella4@gentoo.org> +w3lib-1.11.0.ebuild,
+  -w3lib-1.10.0.ebuild, -w3lib-1.5.ebuild, -w3lib-1.6.ebuild,
+  -w3lib-1.8.0.ebuild:
+  bump, rm old
 
 *w3lib-1.10.0 (28 Aug 2014)
 
